infra/kubernetes-manifests/envoy-rate-limit-policies/external-backend-2tps-policy.yaml
# rate limiter rules to the external domain route
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: policy-external-domain-sample
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: external-domain-sample-route   # matches the HTTPRoute for external domain
  rateLimit:
    type: Global
    global:
      rules:
      - clientSelectors:
        - headers:
          - type: Exact
            name: x-external-domain-rate-test
            value: "go"
        limit:
          requests: 2
          unit: Second
